# hivemind

./: .env.example  .gitignore  AGENTS.md  Makefile  base_agent.py  echo.py  elon.py  henry.py  main.py  requirements.txt  文科生 72 小时杀入 GitHub 全球榜：我没写一行代码，但指挥了一支 AI 军队-36氪.html
.claude/: settings.local.json
docs/: 操作手册.md
outputs/20260225_013051/: result.md  timeline.md
outputs/20260225_015109/: result.md  timeline.md
outputs/20260225_020105/: ARCHITECTURE.md  CONTRIBUTING.md  LAUNCH_PLAN.md  README.md  timeline.md
outputs/20260225_020105/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
outputs/20260225_023041/: ARCHITECTURE.md  CONTRIBUTING.md  LAUNCH_PLAN.md  README.md  task.txt  timeline.md
outputs/20260225_025000/: result.md  task.txt  timeline.md
outputs/20260225_025511/: result.md  timeline.md
outputs/20260225_025826/: result.md  task.txt  timeline.md
outputs/20260225_030429/: result.md  timeline.md
outputs/20260225_030918/: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  task.txt  timeline.md
outputs/20260225_030918/.github/: PULL_REQUEST_TEMPLATE.md
outputs/20260225_030918/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
outputs/20260225_030918/.github/workflows/: ci.yml
outputs/20260225_030918/docs/: ARCHITECTURE.md
tests/: test_agents.py
