[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hivemind-agents"
version = "0.1.0"
description = "Hierarchical multi-agent orchestration framework built on Anthropic Claude"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Hive Mind Contributors" },
]
keywords = ["agents", "llm", "anthropic", "claude", "multi-agent", "orchestration", "asyncio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "anthropic>=0.39.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "mypy>=1.11",
    "pre-commit>=3.8",
]

[project.urls]
Homepage = "https://github.com/hivemind-agents/hivemind"
Documentation = "https://github.com/hivemind-agents/hivemind#readme"
Repository = "https://github.com/hivemind-agents/hivemind"
Issues = "https://github.com/hivemind-agents/hivemind/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "SIM", "TCH"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.coverage.run]
source = ["hivemind"]

[tool.coverage.report]
fail_under = 80
